// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component should match default snapshot 1`] = `
<div>
  <p
    class="sc-bdVaJa bBQvIk"
  >
    This is mocked text
  </p>
</div>
`;

exports[`Text component should match snapshot with truncated text 1`] = `
<div>
  <p
    class="sc-bdVaJa lbWssx"
  >
    This is mocked text
  </p>
</div>
`;

exports[`Text component should match snapshot with underlined text 1`] = `
<div>
  <p
    class="sc-bdVaJa iGGHkB"
  >
    This is mocked text
  </p>
</div>
`;

exports[`Text component should match snapshot with uppercased text 1`] = `
<div>
  <p
    class="sc-bdVaJa kvtJme"
  >
    This is mocked text
  </p>
</div>
`;
